# Generated by Django 4.2.16 on 2025-09-01 13:39

from django.db import migrations, models
import django.utils.timezone


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('email', models.EmailField(error_messages={'unique': 'A user with that email already exists.'}, max_length=254, unique=True, verbose_name='email address')),
                ('name', models.CharField(max_length=255, verbose_name='full name')),
                ('company_id', models.CharField(blank=True, help_text='VAT number or ID of the company this user is associated with', max_length=50, null=True, verbose_name='company ID')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('phone', models.CharField(blank=True, max_length=20, verbose_name='phone number')),
                ('avatar', models.ImageField(blank=True, help_text='User profile picture', null=True, upload_to='avatars/', verbose_name='avatar')),
                ('bio', models.TextField(blank=True, verbose_name='biography')),
                ('language', models.CharField(choices=[('en', 'English'), ('fr', 'Français'), ('nl', 'Nederlands'), ('de', 'Deutsch')], default='en', help_text='Preferred language for the interface', max_length=10, verbose_name='language')),
                ('email_notifications', models.BooleanField(default=True, help_text='Receive email notifications', verbose_name='email notifications')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'user',
                'verbose_name_plural': 'users',
                'db_table': 'users',
                'ordering': ['-date_joined'],
            },
        ),
    ]
